--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Meera Jobs - Authentication UI"
+      content="Kihlot Jobs - Authentication UI"
     />
     <title>Kihlot Jobs</title>
   </head>
